Fri Aug 23 11:07:08 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/Makefile.sub (config.h): now SIZEOF_CLOCK_T is needed for
	  unsigned_clock_t.

Thu Aug 22 22:01:04 2013  Tanaka Akira  <akr@fsij.org>

	* process.c (rb_clock_gettime): Strip "s" from unit names.

Thu Aug 22 20:14:59 2013  Tanaka Akira  <akr@fsij.org>

	* process.c (unsigned_clock_t): Defined.
	  (rb_clock_gettime): Consider clock_t overflow for
	  ISO_C_CLOCK_BASED_CLOCK_PROCESS_CPUTIME_ID.

	* configure.in: Check the size of clock_t.

Thu Aug 22 16:22:48 2013  Koichi Sasada  <ko1@atdot.net>

	* compile.c (build_postexe_iseq): fix to setup the local table.

Thu Aug 22 15:42:43 2013  Koichi Sasada  <ko1@atdot.net>

	* compile.c (rb_iseq_compile_node): accept NODE_IFUNC to support
	  custom compilation.

	* compile.c (NODE_POSTEXE): compile to
	  "ONCE{ VMFrozenCore::core#set_postexe{...} }" with a new custom
	  compiler `build_postexe_iseq()'.

	* vm.c (m_core_set_postexe): remove parameters (passed by a block).

Thu Aug 22 06:54:15 2013  Tanaka Akira  <akr@fsij.org>

	* process.c (rb_clock_gettime): Change emulation symbols for
	  Process.clock_gettime.

Thu Aug 22 06:24:54 2013  Tanaka Akira  <akr@fsij.org>

	* process.c (make_clock_result): Extracted from rb_clock_gettime.

Wed Aug 21 22:30:51 2013  Tanaka Akira  <akr@fsij.org>

	* process.c (rb_clock_gettime): clock() based CLOCK_PROCESS_CPUTIME_ID
	  emulation implemented.

Wed Aug 21 21:02:37 2013  Tanaka Akira  <akr@fsij.org>

	* process.c (rb_proc_times): Use RB_GC_GUARD to guard objects from GC.

Wed Aug 21 20:33:01 2013  Tanaka Akira  <akr@fsij.org>

	* process.c (get_clk_tck): Extracted from rb_proc_times.
	  (rb_clock_gettime): times() based CLOCK_PROCESS_CPUTIME_ID emulation
	  is implemented.

Wed Aug 21 19:31:48 2013  Tanaka Akira  <akr@fsij.org>

	* process.c: POSIX_GETTIMEOFDAY_CLOCK_REALTIME is renamed to
	  SUS_GETTIMEOFDAY_CLOCK_REALTIME.

Wed Aug 21 19:17:46 2013  Tanaka Akira  <akr@fsij.org>
