@@ -1,3 +1,7 @@
+Fri Aug 23 11:25:57 2013  Koichi Sasada  <ko1@atdot.net>
+
+	* array.c: introduce ARY_SHARED_OCCUPIED(shared).
+
 Fri Aug 23 11:07:08 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* win32/Makefile.sub (config.h): now SIZEOF_CLOCK_T is needed for
